--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 <body>
@@ -39,8 +39,6 @@
                     </ul>
                 </div>
             </div>
-            <!-- Imagem visível apenas na versão tablet/desktop -->
-            <img src="" alt="">
         </div>
         <div class="resultados">
             <div class="cartoes-resultado" id="cartoes_resultado"></div>
